Made a first integration between Auth and the frontend

--- a/public/modules/users/views/signin.client.view.html
+++ b/public/modules/users/views/signin.client.view.html
@@ -1,41 +1,25 @@
 <section class="row" data-ng-controller="AuthenticationController">
-	
-	<div class="col-lg-offset-4 col-lg-4 col-md-offset-4 col-md-4 col-sm-offset-4 col-sm-4">
-		<br /><br />
-		<a href="/auth/azure" class="btn btn-primary btn-lg"><h6 class="col-md-12 text-left" translate>Click here to access digidoc with your red cross account</h6></a>
-		<br/>
-		<br/>
-		<p class="bg-success">
-				<h2 translate>Login explanation</h2>
-				<span translate>You are being directed to a microsoft login page. Please use it as follows:</span>
-				<ul>
-					<li translate>For @rodekruis.nl addresses, simply enter your emailaddress and password to sign in</li>
-					<li translate>For @redcross.nl addresses, enter your @redcross.nl email address. You will be redirected to another page. On this page, use your redcross\username and password to sign in</li>
-				</ul>
 
-		</p>
-	</div>
-	<!--
-	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
-		<form data-ng-submit="signin()" class="signin form-horizontal" autocomplete="off">
-			<fieldset>
-				<div class="form-group">
-					<label for="username" translate>@redcross.nl email</label>
-					<input type="text" id="email" name="email" class="form-control" data-ng-model="credentials.email" placeholder="Email">
-				</div>
-				<div class="form-group">
-					<label for="password" translate>Password</label>
-					<input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
-				</div>
-				<div class="text-center form-group">
-					<button type="submit" class="btn btn-primary" translate>Signin</button>&nbsp; or&nbsp;
-					<a href="/#!/signup" translate>Signup</a>
-				</div>
-				<div data-ng-show="error" class="text-center text-danger">
-					<strong>{{error}}</strong>
-				</div>
-			</fieldset>
-		</form>
-	</div>
-	-->
+
+    <div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
+        <form data-ng-submit="signin()" class="signin form-horizontal" autocomplete="off">
+            <fieldset>
+                <div class="form-group">
+                    <label for="username" translate>@redcross.nl email</label>
+                    <input type="text" id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Email">
+                </div>
+                <div class="form-group">
+                    <label for="password" translate>Password</label>
+                    <input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
+                </div>
+                <div class="text-center form-group">
+                    <button type="submit" class="btn btn-primary" translate>Signin</button>&nbsp; or&nbsp;
+                    <a href="/#!/signup" translate>Signup</a>
+                </div>
+                <div data-ng-show="error" class="text-center text-danger">
+                    <strong>{{error}}</strong>
+                </div>
+            </fieldset>
+        </form>
+    </div>
 </section>
